[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webhaak"
version = "0.5.4"
authors = [
    {name = "Michiel Scholten", email = "michiel@diginaut.net"},
]
description= "Simple webhook service to update and deploy sites and do other maintenance and automatic tasks"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["webhook", "api", "automation", "CI/CD"]
license = {text = "Apache"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "importlib-metadata; python_version<'3.8'",
    "fastapi[all]",
    "pydantic>2.0",
    "requests",
    "strictyaml",
    "gitpython",
    "rq"
]
# dynamic = ["version"]

[project.scripts]
my-script = "webhaak:app"

[project.urls]
"Homepage" = "https://github.com/aquatix/webhaak"
"Bug Tracker" = "https://github.com/aquatix/webhaak/issues"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "example_config/gunicorn_webhaak_conf.py",
    "example_config/rq_settings.example.py",
    "example_config/settings.py",
]
ignore = ["D203"]
line-length = 120
select = [
    "C9",
    "D",
    "E",
    "F",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 10
